# PE_Potato

./: .gitignore  Cargo.toml  LICENSE  README.md  config.conf  config.json
src/: arguments.rs  main.rs  module_info.rs
src/Experimental_ui/: main.rs
src/arguments/: av_json.rs  filescanio.rs  filescanio_json.rs  function_backlist.rs  local_parse.rs  malware_bazaar.rs  mb_file_json.rs  virus_total.rs  vt_behaviour_json.rs  vt_file_json.rs
src/arguments/text_files/: blacklist.json  mitre_attack.json
