[package]
name = "PE_Potato"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[registries.crates-io]
protocol = "sparse"

[profile.release]
lto = true
opt-level = "z"  # Optimize for size.
codegen-units = 1
strip = true

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
comfy-table = "6.1.4"
console = "0.15.5"
custom_error = "1.9.2"
goblin = "0.6.0"
# html_parser = "0.7.0"
# md5 = "0.7.0"
reqwest = { version = "0.11.14", features = ["blocking", "multipart"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sha256 = "1.1.2"
